--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -1,13 +1,22 @@
-.{
-    margin: 0;
+*{
     padding: 0;
+    margin: 0;
+    text-emphasis-color: green;
+    font-size: 50%;
 
-
+    
 }
 
 .navbar{
 display: inline;
+font-size: 100;
 }
 ul{
+color: red;
+}
 
+ul li
+{
+    color: green;
+    font-size: 90%;
 }
