--- a/templates/index.html
+++ b/templates/index.html
@@ -11,6 +11,7 @@
     <nav class="navabr">
         <ul>
             <li><a href="#">Home</a></li>
+            <li><a href="board">Open Whiteboard</a></li>
             <li><a href="#">Login</a></li>
             <li><a href="#">register</a></li>
             
