--- a/templates/board.html
+++ b/templates/board.html
@@ -5,9 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Whiteboard</title>
+    <script src="{% static 'js/board.js' %}"></script>
 </head>
 <body>
     <canvas id="board"></canvas>
-    <script src="{% static 'js/board.js' %}"></script>
+    <button onclick="demo()">click</button>
+    
+
 </body>
 </html>
