--- a/static/styles/index.css
+++ b/static/styles/index.css
@@ -2,22 +2,11 @@
     padding: 0;
     margin: 0;
     text-emphasis-color: green;
+    font-size: 100%;
     text-decoration: none;
-    font-size: 110%;
-
-    
+     
 }
 
-.navbar{
-display: inline;
-font-size: 100;
-}
-ul{
-color: red;
-}
-
-ul li
-{
-    color: green;
-    font-size: 90%;
+h1{
+color:green;
 }
