--- a/static/styles/index.css
+++ b/static/styles/index.css
@@ -1,12 +1,12 @@
-*{
-    padding: 0;
-    margin: 0;
+body{padding: 0px;
+    margin: 0px;
+    background-image: url("BG.jpg") no-repeat center center fixed;
     text-emphasis-color: green;
     font-size: 100%;
     text-decoration: none;
-     
+    color: red; 
 }
 
-h1{
+h1{background-color: blue;
 color:red;
 }
