--- a/templates/register.html
+++ b/templates/register.html
@@ -4,17 +4,64 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register</title>
+    <script>
+        function validation()
+           {    
+            
+            var name=document.getElementById("first_name").value;
+            var username=document.getElementById("username").value;
+            var email=document.getElementById("email").value;
+            var password1=document.getElementById("password1").value;
+            var password2=document.getElementById("password2").value;
+            if(name=="")
+                {
+                    alert("Name cannot be empty");
+                    return false;
+                }
+            else if(username=="")
+                {
+                    alert("Username cannot be empty");
+                    return false;
+                }
+            else if(email=="")
+                {
+                    alert("Email cannot be empty");
+                    return false;
+                } 
+            else if(password1=="")
+                {
+                    alert("Password cannot be empty");
+                    return false;
+                }
+            else if(password1!=password2)
+                {
+                    alert("Passwords are not matching");
+                    return false;
+                } 
+            
+
+            else
+            {
+            
+            return true;
+
+            }
+            
+           }
+        </script>
+
 </head>
-<body>
-    <form action="register" method="post">
+<body>  
+    <form onsubmit="return validation()"  action="register"   method="post">
         {% csrf_token %}
-        <input type="text" name="first_name" placeholder="First Name"><br>
+    
+        <input type="text"  name="first_name" id="first_name" placeholder="First Name" ><br>
         <input type="text" name="last_name" placeholder="Last Name"><br>
-        <input type="text" name="username" placeholder="Username"><br>
-        <input type="email" name="email" placeholder="Email"><br>
-        <input type="password" name="password1" placeholder="Password"><br>
-        <input type="password" name="password2" placeholder="Confirm Password"><br>
-        <input type="Submit">
+        <input type="text" id="username" name="username"  placeholder="Username"><br>
+        <input type="email" id="email" name="email" placeholder="Email"><br>
+        <input type="password" id="password1" name="password1" placeholder="Password"><br>
+        <input type="password" id="password2" name="password2" placeholder="Confirm Password"><br>
+        <button type="submit">submit</button>
     </form>
 
     {% for message in messages%}
@@ -22,5 +69,7 @@
         <h2>{{message}}</h2>
     </div>
     {% endfor %}
+    
+
 </body>
 </html>
