--- a/templates/board.html
+++ b/templates/board.html
@@ -12,6 +12,13 @@
    
 </head>
 <body>
+    {{ room_name|json_script:"room-name" }}
+    <script>
+        
+    </script>
+
+
+
     <button id="btn1">Change type</button>
     <canvas id="canvas">  </canvas>
     <div id="sel">
@@ -26,21 +33,20 @@
     <script src="{% static 'js/board.js' %}"></script>
     <script src="{% static 'js/jquery/jquery.js' %}" type="text/javascript"></script>
     <script src="{% static 'js/jquery-ui/jquery-ui.js' %}" type="text/javascript"></script>
-
     <script>
         $(".img").tooltip({
-            show:{effect:"highlight",duration:1000}
-        })
-        
-        $("#btn1").click(function(){
-           $("#sel").dialog({
-               title: "Edit",
-               height:310,
-               width: 15,
-               draggable: true
-        
-           });
-        });
+          show:{effect:"highlight",duration:1000}
+      })
+      
+      $("#btn1").click(function(){
+         $("#sel").dialog({
+             title: "Edit",
+             height:310,
+             width: 15,
+             draggable: true
+      
+         });
+      });
     </script>
     
    
