join with code facility added

--- a/templates/index.html
+++ b/templates/index.html
@@ -46,10 +46,12 @@
            <a href="accounts/login" ><button class="btn">LOGIN</button></a>
            <a href="accounts/register" ><button class="btn">SIGN UP</button></a>
         </div>
+        <input id="room-name-submit" class="btn" type="button" value="Create Borad">
+        <a href="join" ><button class="btn">Join Board</button></a>
         <div class="box1">"ONLINE WHITEBOARD":<br>Need Of The Hour</div>
         <div class="box2">Sketch,Share and Collaborate with your team like never before</div>
         <!-- <div class="box3"><a href="board" ><button class="btn" id="create-board" >CREATE NEW(WHITEBOARD)</button></a></div> -->
-        <input id="room-name-submit" class="btn" type="button" value="Create Borad">
+        
         <div class="container">
         <div class="box">
         
